--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,4 @@
+/*
 :root {
     --primary-bc-color: #E5E5E5;
     --secondary-bc-color: #2F303A;
@@ -7,14 +8,14 @@
     --secondary-text-color: #757575;
     --accent-color: #2196f3;
     --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-    
-}
+} */
 /* ----- <body> start-page ----- */
 
+/*
 .start-page {
     font-family: "Roboto", Tahoma, sans-serif;
     background-color: var(--white-bc-color);
-     color: var(--primary-text-color);
+    color: var(--primary-text-color);
  }
 
  p,h1,h2,h3,h4,h5,h6 {
@@ -30,7 +31,7 @@
      display: block;
      max-width: 100%;
      height: auto;
- }
+ } */
 
  .link {
      text-decoration: none;
@@ -69,7 +70,7 @@
     clip-path: inset(50%);
     margin: -1px;
  }
-
+/*
  .head-text {
     font-weight: 500;
     font-size: 14px;
@@ -82,202 +83,15 @@
     font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.03em;
-
  }
-
+*/
  /* ----- Header ----- */
 
- .header {
-    padding-top: 24px;
-    padding-bottom: 25px;
-    border-bottom: 1px solid #eeeeee;
-
-    background-color: var(--white-bc-color);
-}
-
-.header .container {
-   display: flex;
-   align-items: center;
-}
-
-
-/* --- logo --- */
-
-
-.header-logo {
-   display: block;
-   margin-right: 93px;
-
-font-family: 'Raleway';
-font-weight: 700;
-font-size: 26px;
-line-height: 1.19;
-letter-spacing: 0.03em;
-
-   color: var(--accent-color);
-}
-
-/* --- menu-list --- */
-
-.menu-list {
-   display: flex;
-}
-
-.menu-list__link {
-padding-top: 32px;
-padding-bottom: 32px;
-
-color: var(--primary-text-color);
-
-position: relative;
-
-transition: color 250ms var(--timing-function);
-}
-
-.menu-list__link:hover,
-.menu-list__link:focus {
-   color: var(--accent-color);
-}
-
-.current::after {
-   content: '';
-
-   display: block;
-   position: absolute;
-   left: 0px;
-   bottom: -1px;
-   border-radius: 2px;
-
-   width: 100%;
-   height: 4px;
-
-   background-color: var(--accent-color);
-}
-
-.current {
-   color: var(--accent-color);
-}
-
-.menu-list__item:not(:last-child) {
-   margin-right: 50px;
-}
-
-
-/* --- address --- */
-
-.header-navigation {
-   margin-left: auto;
-}
-
-.address {
-   display: flex;
-}
-
-.address__mail {
-   display: flex;
-   margin-right: 50px;
-   align-items: center;
-
-   color: var(--secondary-text-color);
-
-   transition: color 250ms var(--timing-function);
-}
-
-.address__mail:hover,
-.address__mail:focus {
-   color: var(--accent-color);  
-}
-
-.address__mail-icon {
-   margin-right: 10px;
-   
-   fill: currentColor;
-   }
-
-.address__tel {
-   display: flex;
-   align-items: center;
-
-   color: var(--secondary-text-color);  
-
-   transition: color 250ms var(--timing-function);
-}
-
-.address__tel:hover,
-.address__tel:focus {
-   color: var(--accent-color);
-}
-
-.address__tel-icon {
-   margin-right: 10px;
-   align-items: baseline;
-   
-   fill: currentColor;
-   }
 
 /* ----- Hero ----- */
 
 
-.hero {
-    padding-top: 200px;
-    padding-bottom: 200px;
 
-    background-color: var(--secondary-bc-color);
-
-        background-image:linear-gradient(
-        rgba(47, 48, 58, 0.4), 
-        rgba(47, 48, 58, 0.4)), 
-        url(../images/hero_bc.jpg);
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center;
-        max-width: 1600px;
-        margin: 0 auto;
-}
-.hero__title {
-font-weight: 900;
-font-size: 44px;
-line-height: 1.36;
-text-align: center;
-letter-spacing: 0.06em;
-text-transform: uppercase;
-
-    max-width: 700px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 30px;
-
-    color: var(--white-bc-color);
-}
-
-.hero__btn { 
-    width: 200px; 
-    height: 50px;
-    border: none;
-    border-radius: 4px;
-
-font-family: inherit; 
-font-style: normal; 
-font-weight: 700;  
-font-size: 16px;
-line-height: 1.88;
-letter-spacing: 0.06em;
-background-color: var(--accent-color);
-
-    display: block;
-    margin: 0 auto;
-    text-align: center;
-
-color: var(--white-bc-color);
-cursor: pointer;
-
-transition: color 250ms var(--timing-function), background-color 250ms var(--timing-function);
-}
-
-.hero__btn:hover,
-.hero__btn:focus {
-    background-color: #188ce8;
-}
 
 /* --- features --- */
 
@@ -286,7 +100,7 @@ transition: color 250ms var(--timing-function), background-color 250ms var(--tim
     padding-bottom: 94px;
 }
 
-.features__list {
+.features {
     display: flex;
 }
 
@@ -345,7 +159,7 @@ letter-spacing: 0.03em;
     color: var(--primary-text-color);
 }
 
-.work__list {
+.work {
     display: flex;
 }
 
