--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 :root {
   --primary-bc-color: #E5E5E5;
   --secondary-bc-color: #2F303A;
@@ -9,10 +10,17 @@
   --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.start-page {
-  font-family: "Roboto", Tahoma, sans-serif;
-  background-color: var(--white-bc-color);
-  color: var(--primary-text-color);
+.visually-hidden {
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  margin: -1px;
 }
 
 p, h1, h2, h3, h4, h5, h6 {
@@ -28,6 +36,35 @@ img {
   display: block;
   max-width: 100%;
   height: auto;
+}
+
+.start-page {
+  font-family: "Roboto", Tahoma, sans-serif;
+  background-color: var(--white-bc-color);
+  color: var(--primary-text-color);
+}
+
+.link {
+  text-decoration: none;
+}
+
+.list {
+  list-style: none;
+}
+
+.container {
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin: 0 auto;
+}
+
+.logo--black {
+  color: var(--primary-text-color);
+}
+
+.logo--white {
+  color: var(--white-bc-color);
 }
 
 .head-text {
@@ -197,4 +234,407 @@ img {
 .hero__btn:hover,
 .hero__btn:focus {
   background-color: #188ce8;
+}
+
+.about-section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
+.features {
+  display: flex;
+}
+
+.features__item:not(:last-child) {
+  margin-right: 30px;
+}
+
+.features__icon {
+  display: flex;
+  max-width: 270px;
+  height: 120px;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 30px;
+  background-color: var(--team-bc-color);
+}
+
+.features__title {
+  margin-bottom: 10px;
+  font-style: normal;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--primary-text-color);
+}
+
+.features__text {
+  max-width: 270px;
+  color: var(--secondary-text-color);
+}
+
+.study-section {
+  padding-bottom: 94px;
+}
+
+.study__title {
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 50px;
+  font-size: 36px;
+  line-height: 1.17;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--primary-text-color);
+}
+
+.study-list {
+  display: flex;
+}
+
+.study-list__item:not(:last-child) {
+  margin-right: 30px;
+}
+
+.study-list__box {
+  position: relative;
+}
+
+.study-list__title {
+  position: absolute;
+  bottom: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  width: 100%;
+  height: 70px;
+  color: var(--white-bc-color);
+  background-color: rgba(47, 48, 58, 0.8);
+}
+
+.team {
+  padding-top: 94px;
+  padding-bottom: 94px;
+  background-color: var(--team-bc-color);
+}
+
+.team-title {
+  margin-bottom: 50px;
+  font-size: 36px;
+  line-height: 1.17;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--primary-text-color);
+}
+
+.team-pictures {
+  display: flex;
+  margin-left: -30px;
+}
+
+.team-image {
+  width: calc(25% - 30px);
+  margin-left: 30px;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.1411764706), 0px 2px 1px rgba(0, 0, 0, 0.1215686275);
+}
+
+.team-name {
+  margin-bottom: 10px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.19;
+  letter-spacing: 0.03em;
+  text-align: center;
+  color: var(--primary-text-color);
+}
+
+.team-text {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.19;
+  letter-spacing: 0.03em;
+  text-align: center;
+  margin-bottom: 16px;
+  color: var(--secondary-text-color);
+}
+
+.team-box {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #fff;
+}
+
+.team-social-list {
+  display: flex;
+  justify-content: center;
+}
+
+.team-social-item + .team-social-item {
+  margin-left: 10px;
+}
+
+.team-social-link {
+  width: 44px;
+  height: 44px;
+  background-color: var(--white-bc-color);
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: background-color 250ms var(--timing-function);
+}
+
+.team-social-link:hover,
+.team-social-link:focus {
+  background-color: var(--accent-color);
+}
+
+.team-social-icon {
+  fill: #AFB1B8;
+  transition: fill 250ms var(--timing-function);
+}
+
+.team-social-link:hover .team-social-icon,
+.team-social-link:focus .team-social-icon {
+  fill: var(--white-bc-color);
+}
+
+.clients {
+  padding: 94px 0px;
+}
+
+.clients-title {
+  margin-bottom: 50px;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.17;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--primary-text-color);
+}
+
+.clients-list {
+  display: flex;
+}
+
+.clients-item {
+  display: flex;
+}
+
+.clients-item:not(:last-child) {
+  margin-right: 30px;
+}
+
+.clients-link {
+  display: flex;
+  width: 170px;
+  height: 92px;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #AFB1B8;
+  border-radius: 4px;
+  background-position: center;
+  fill: #AFB1B8;
+  transition: fill 250ms var(--timing-function);
+}
+
+.clients-link:hover,
+.clients-link:focus {
+  border-color: var(--accent-color);
+  fill: var(--accent-color);
+}
+
+.clients-link-icon {
+  display: flex;
+}
+
+.footer-section {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: var(--secondary-bc-color);
+}
+
+.footer__container {
+  display: flex;
+  align-items: baseline;
+}
+
+.footer-logo {
+  margin-bottom: 20px;
+  display: block;
+  font-family: "Raleway";
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.19;
+  letter-spacing: 0.03em;
+  color: var(--accent-color);
+}
+
+.contacts-list {
+  max-width: 231px;
+}
+
+.contacts-list__address {
+  display: block;
+  margin-bottom: 9px;
+  color: var(--white-bc-color);
+}
+
+.contacts-list__mail {
+  display: block;
+  margin-bottom: 9px;
+  color: rgba(255, 255, 255, 0.6);
+  transition: color 250ms var(--timing-function);
+}
+
+.contacts-list__mail:hover,
+.contacts-list__mail:focus {
+  color: var(--accent-color);
+}
+
+.contacts-list__tel {
+  color: rgba(255, 255, 255, 0.6);
+  transition: color 250ms var(--timing-function);
+}
+
+.contacts-list__tel:hover,
+.contacts-list__tel:focus {
+  color: var(--accent-color);
+}
+
+/* ----- Присоединяйтесь ----- */
+.footer-social {
+  margin-left: 70px;
+  display: block;
+  justify-content: center;
+}
+
+.social__title {
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-align: left;
+  margin-bottom: 20px;
+  color: var(--white-bc-color);
+}
+
+.connect {
+  display: flex;
+  justify-content: center;
+}
+
+.connect__item + .connect__item {
+  margin-left: 10px;
+}
+
+.connect__link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  background-color: rgba(255, 255, 255, 0.1);
+  color: var(--white-bc-color);
+  transition: background-color 250ms var(--timing-function);
+}
+
+.connect__link:hover,
+.connect__link:focus {
+  background-color: var(--accent-color);
+}
+
+.connect__icon {
+  fill: var(--white-bc-color);
+}
+
+.connect__link:hover .connect__icon {
+  fill: var(--white-bc-color);
+}
+
+/* ----- Mailing-List ----- */
+.mailing-list {
+  display: block;
+  margin-left: 93px;
+  width: 570px;
+  height: 86px;
+}
+
+.subscribe__title {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.17;
+  margin-bottom: 20px;
+  color: var(--white-bc-color);
+}
+
+.subscribe__field {
+  display: flex;
+}
+
+.subscribe__email {
+  width: 358px;
+  height: 50px;
+  padding-left: 16px;
+  border: 1px solid rgba(255, 255, 255, 0.6);
+  border-radius: 4px;
+  color: rgba(255, 255, 255, 0.6);
+  background-color: transparent;
+  transition: border 250ms var(--timing-function), color 250ms var(--timing-function);
+}
+
+.subscribe__email:focus {
+  outline: none;
+  color: var(--white-bc-color);
+  border: 1px solid var(--accent-color);
+}
+
+.subscribe__email::placeholder {
+  color: rgba(255, 255, 255, 0.6);
+  transition: color 250ms var(--timing-function);
+}
+
+.subscribe-email:focus::placeholder {
+  color: var(--accent-color);
+}
+
+.subscribe__btn {
+  position: relative;
+  width: 200px;
+  height: 50px;
+  margin-left: 12px;
+  background-color: var(--accent-color);
+  border: 2px solid transparent;
+  border-radius: 4px;
+  transition: border 250ms var(--timing-function);
+}
+
+.subscribe__btn:focus {
+  outline: none;
+  border: 2px solid rgba(255, 255, 255, 0.6);
+}
+
+.subscribe__text {
+  position: absolute;
+  top: 50%;
+  left: 29px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+  transform: translateY(-50%);
+  color: var(--white-bc-color);
+}
+
+.subscribe__icon {
+  position: absolute;
+  right: 18px;
+  top: 50%;
+  transform: translateY(-50%);
+  margin-left: 10px;
 }/*# sourceMappingURL=main.css.map */
