--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,9 +1,18 @@
 @import "./utils/vars";
+@import "./utils/hidden";
 
 @import "./base/reset";
+@import "./base/common";
 
+@import "./components/container";
+@import "./components/logo-color";
 @import "./components/head-text";
 @import "./components/secondary-text";
 
 @import "./layout/header";
 @import "./layout/hero";
+@import "./layout/about";
+@import "./layout/study";
+@import "./layout/team";
+@import "./layout/clients";
+@import "./layout/footer";
