--- a/sass/main.scss
+++ b/sass/main.scss
@@ -16,4 +16,6 @@
 @import "./layout/team";
 @import "./layout/clients";
 @import "./layout/footer";
+@import "./layout/filter-btn";
+@import "./layout/filter";
 @import "./layout/modal";
