--- a/css/main.css
+++ b/css/main.css
@@ -639,6 +639,117 @@ img {
   margin-left: 10px;
 }
 
+.filter {
+  padding-top: 94px;
+  padding-bottom: 94px;
+  /*background-color: var(--primary-bc-color); */
+}
+
+.btn {
+  display: flex;
+  margin-bottom: 50px;
+  justify-content: center;
+}
+
+.btn__item:not(:last-child) {
+  margin-right: 8px;
+}
+
+.btn__list {
+  display: block;
+  padding: 6px 22px;
+  border: none;
+  border-radius: 4px;
+  font-family: inherit;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.62;
+  text-align: center;
+  letter-spacing: 0.03em;
+  background-color: var(--team-bc-color);
+  color: var(--primary-text-color);
+  cursor: pointer;
+  transition: color 250ms var(--timing-function), background-color 250ms var(--timing-function), box-shadow 250ms var(--timing-function);
+}
+
+.btn__list:hover,
+.btn__list:focus {
+  box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.1215686275), 0px 1px 2px 0px rgba(0, 0, 0, 0.0784313725), 0px 3px 1px 0px rgba(0, 0, 0, 0.1019607843);
+  background-color: var(--accent-color);
+  color: var(--white-bc-color);
+}
+
+.btn__list.current {
+  background-color: var(--accent-color);
+}
+
+.filter__list {
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: -30px;
+  margin-bottom: -30px;
+}
+
+.filter__item {
+  width: calc(33.3333333333% - 30px);
+  margin-left: 30px;
+  margin-bottom: 30px;
+  transition: box-shadow 250ms var(--timing-function);
+}
+
+.filter__item:hover,
+.filter__item:focus {
+  box-shadow: 1px 4px 6px 0px rgba(0, 0, 0, 0.1607843137), 0px 4px 4px 0px rgba(0, 0, 0, 0.0588235294), 0px 1px 1px 0px rgba(0, 0, 0, 0.1215686275);
+}
+
+.filter__item:hover .filter__text {
+  transform: translateY(0%);
+}
+
+.filter__wrap {
+  position: relative;
+  overflow: hidden;
+}
+
+.filter__text {
+  position: absolute;
+  top: 0;
+  overflow: auto;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.56;
+  padding: 63px 24px;
+  transform: translateY(100%);
+  color: var(--white-bc-color);
+  background-color: rgba(33, 150, 243, 0.8980392157);
+  transition: transform 250ms var(--timing-function);
+}
+
+.filter__box {
+  padding: 20px 24px;
+  border-right: 1px solid #eeeeee;
+  border-bottom: 1px solid #eeeeee;
+  border-left: 1px solid #eeeeee;
+}
+
+.filter__name {
+  margin-bottom: 4px;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+  text-align: left;
+  color: var(--primary-text-color);
+}
+
+.filter__place {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.03em;
+  text-align: left;
+  color: var(--secondary-text-color);
+}
+
 .backdrop {
   position: fixed;
   top: 0;
