--- a/sass/layout/_about.scss
+++ b/sass/layout/_about.scss
@@ -5,40 +5,40 @@
 
 .features {
     display: flex;
+
+    &__item {
+        width: 270px;
+    
+        &:not(:last-child) {
+            margin-right: 30px;
+        }
+    }
+    &__icon {
+        display: flex;
+        max-width: 270px;
+        height: 120px;
+        justify-content: center;
+        align-items: center;
+        
+        margin-bottom: 30px;
+        
+            background-color: var(--team-bc-color);   
+        }
+        &__title {
+            margin-bottom: 10px;
+        
+        font-style: normal;
+        font-size: 14px;
+        line-height: 1.14;
+        letter-spacing: 0.03em;
+        text-transform: uppercase;
+        
+            color: var(--primary-text-color);
+        }
+        &__text { 
+            max-width: 270px;   
+            
+                color: var(--secondary-text-color);
+            }
 }
 
-
-.features__item:not(:last-child) {
-    margin-right: 30px;
-}
-
-.features__icon {
-display: flex;
-max-width: 270px;
-height: 120px;
-justify-content: center;
-align-items: center;
-
-margin-bottom: 30px;
-
-    background-color: var(--team-bc-color);   
-}
-
-.features__title {
-    margin-bottom: 10px;
-
-font-style: normal;
-font-size: 14px;
-line-height: 1.14;
-letter-spacing: 0.03em;
-text-transform: uppercase;
-
-    color: var(--primary-text-color);
-
-}
-
-.features__text { 
-max-width: 270px;   
-
-    color: var(--secondary-text-color);
-}
