--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -3,11 +3,11 @@
     padding-bottom: 60px;
 
     background-color: var(--secondary-bc-color);
-}
 
-.footer__container {
-    display: flex;
-    align-items: baseline;
+        .container {
+        display: flex;
+        align-items: baseline;
+    }
 }
 
 .footer-logo {  
