--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -4,11 +4,11 @@
     border-bottom: 1px solid #eeeeee;
 
     background-color: var(--white-bc-color);
-}
-
-.header .container {
-   display: flex;
-   align-items: center;
+    
+      .container {
+      display: flex;
+      align-items: center;
+   }
 }
 
 .header-logo {
@@ -26,41 +26,40 @@ letter-spacing: 0.03em;
 
 .menu-list {
    display: flex;
-}
 
-.menu-list__link {
-padding-top: 32px;
-padding-bottom: 32px;
-
-color: var(--primary-text-color);
-
-position: relative;
-
-transition: color 250ms var(--timing-function);
-}
-
-.menu-list__link:hover,
-.menu-list__link:focus {
-   color: var(--accent-color);
-}
-
-.current::after {
-   content: '';
-
-   display: block;
-   position: absolute;
-   left: 0px;
-   bottom: -1px;
-   border-radius: 2px;
-
-   width: 100%;
-   height: 4px;
-
-   background-color: var(--accent-color);
+   &__link {
+      padding-top: 32px;
+      padding-bottom: 32px;
+      
+      color: var(--primary-text-color);
+      
+      position: relative;
+      
+      transition: color 250ms var(--timing-function);
+      }
+      &__link:hover,
+      &__link:focus {
+         color: var(--accent-color);
+      }
 }
 
 .current {
    color: var(--accent-color);
+
+   &::after {
+      content: '';
+   
+      display: block;
+      position: absolute;
+      left: 0px;
+      bottom: -1px;
+      border-radius: 2px;
+   
+      width: 100%;
+      height: 4px;
+   
+      background-color: var(--accent-color);
+   }
 }
 
 .menu-list__item:not(:last-child) {
@@ -73,46 +72,51 @@ transition: color 250ms var(--timing-function);
 
 .address {
    display: flex;
-}
 
-.address__mail {
-   display: flex;
-   margin-right: 50px;
-   align-items: center;
-
-   color: var(--secondary-text-color);
-
-   transition: color 250ms var(--timing-function);
-}
-
-.address__mail:hover,
-.address__mail:focus {
-   color: var(--accent-color);  
-}
-
-.address__mail-icon {
-   margin-right: 10px;
+   &__mail {
+      display: flex;
+      margin-right: 50px;
+      align-items: center;
    
-   fill: currentColor;
+      color: var(--secondary-text-color);
+   
+      transition: color 250ms var(--timing-function);
+
+      &-icon {
+         margin-right: 10px;
+         
+         fill: currentColor;
+         }
+   }
+   &__mail:hover,
+   &__mail:focus {
+      color: var(--accent-color);  
    }
 
-.address__tel {
-   display: flex;
-   align-items: center;
-
-   color: var(--secondary-text-color);  
-
-   transition: color 250ms var(--timing-function);
-}
-
-.address__tel:hover,
-.address__tel:focus {
-   color: var(--accent-color);
-}
-
-.address__tel-icon {
-   margin-right: 10px;
-   align-items: baseline;
+   &__tel {
+      display: flex;
+      align-items: center;
    
-   fill: currentColor;
+      color: var(--secondary-text-color);  
+   
+      transition: color 250ms var(--timing-function);
+
+      &-icon {
+         margin-right: 10px;
+         align-items: baseline;
+         
+         fill: currentColor;
+         }
    }
+   &__tel:hover,
+   &__tel:focus {
+      color: var(--accent-color);
+   }
+}
+
+
+
+
+
+
+
